build/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-list-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: todo-list.local  # Substitua pelo seu domínio
      http:
        paths:
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: todo-list-service
                port:
                  number: 80
